<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.gabriel.shophelper.view.NewItemActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    android:orientation="vertical">
    <EditText
        android:id="@+id/et_name_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/icons"
        android:ems="10"
        android:background="@android:color/transparent"
        android:drawablePadding="12dp"
        android:padding="8dp"
        android:hint="@string/name_item"
        android:maxLines="1"
        android:layout_marginTop="70dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_dark" />
    <EditText
        android:id="@+id/et_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/icons"
        android:ems="10"
        android:background="@android:color/transparent"
        android:drawablePadding="12dp"
        android:padding="8dp"
        android:hint="@string/price"
        android:maxLines="1"
        android:layout_marginTop="4dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_dark" />
    <TextView
        android:id="@+id/tv_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="12dp"
        android:padding="8dp"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary_dark" />
    <Button
        android:id="@+id/bt_set_image"
        android:text="@string/set_image"
        android:textColor="@color/icons"
        android:background="@color/accent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/iv_set_image"
        android:layout_width="150dp"
        android:layout_height="150dp" />
    <Button
        android:id="@+id/add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/accent"
        android:text="@string/add_item"
        android:textColor="@color/icons"
        android:padding="16dp"
        android:layout_marginTop="24dp"
        android:textSize="18sp"/>
</LinearLayout>

