<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/liner_layout_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="12dp"
        android:layout_marginLeft="77dp"
        android:padding="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q_ty"/>
        <ImageButton
            android:id="@+id/minus"
            android:background="@color/primary"
            android:src="@mipmap/ic_keyboard_arrow_left_white_36dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/view_counter"
            android:paddingTop="8dp"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/plus"
            android:background="@color/primary"
            android:src="@mipmap/ic_keyboard_arrow_right_white_36dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item"
            android:layout_margin="16dp"
            android:background="@color/primary"/>
        <Button
            android:id="@+id/delete_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_margin="16dp"
            android:background="@color/primary"/>
    </LinearLayout>

</LinearLayout>