<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.gabriel.shophelper.activity.AuthenticationActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="18dp"
    android:paddingBottom="18dp"
    android:background="@drawable/new_login_gradients">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:src="@mipmap/ic_launcher" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_person_white_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="6dp"
                android:textColor="@color/primary_light"
                android:textColorHint="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primary_light" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:textColor="@color/primary_light"
                android:textColorHint="#fff" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primary_light" />

            <Button
                android:id="@+id/log_in"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_login"
                android:padding="16dp"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textColor="@color/primary_dark"
                android:textSize="18sp" />

            <Button
                android:id="@+id/sing_up"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_signup"
                android:padding="16dp"
                android:text="@string/sing_up"
                android:textAllCaps="false"
                android:textColor="@color/primary_dark"
                android:textSize="18sp" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sing_in_google"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
